# telegram_pair

./: .env.example  .gitignore  AGENTS.md  README.md  USAGE.md  pyproject.toml
docs/: module-boundaries.md  openclaw-session-guide.md
telegram_pair/: __init__.py  cli_wrapper.py  config.py  context_manager.py  main.py  model_registry.py  models.py  module_size_guard.py  orchestrator.py  orchestrator_commands.py  prompts.py  router.py  session_runtime.py  session_store.py  telegram_app.py
telegram_pair/cli_backends/: __init__.py  base.py  codex_backend.py  stateless_backend.py
tests/: test_cli_wrapper.py  test_config.py  test_context_manager.py  test_entrypoints.py  test_module_size_guard.py  test_orchestrator.py  test_prompts.py  test_router.py  test_runtime_integration.py  test_session_store.py  test_telegram_app.py
